Move all query statements to the models
